# Synapse_RogoDemo

./: .env_sample  .gitignore  DEMO_TABS_GUIDE.md  Procfile  README.md  SLACK_INTEGRATION_COMPLETE.md  SLACK_INTEGRATION_DESIGN.md  SLACK_QUICK_START.md  SLACK_README.md  SLACK_SETUP_GUIDE.md  SLACK_VISUAL_MOCKUP.md  knowledge_graph.json  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  test_all_demo_tabs.py  test_all_tabs.sh  test_slack_integration.py  vercel.json
alembic/versions/: initial_migration.py
api/: index.py  requirements.txt
app/: agent_service.py  content_extractor.py  deduping.py  deep_dive_agent.py  entity_intel.py  evidence_orchestrator.py  evidence_quality.py  extraction_cache.py  github_service.py  ingest_cache.py  main.py  numerical_grounding.py  passage_selector.py  pipeline_metrics.py  prompts.py  slack_endpoints.py  slack_service.py  symbolic_engine.py  synapse_routes.py  text_chunking.py  url_utils.py  vector_store.py  verification_engine.py
calculator/: calculator.py
chrome-extension/: content.css  content.js  manifest.json  popup.html  popup.js
db/: models.py
demo_auth/: auth_api.py
meal_planning_app/api/: endpoints.py
order_tracking_system/: db_models.py
src/database/: models.py
tests/: test_core.py  test_extraction_pipeline.py  test_pipeline_improvements.py  test_prioritize.py  test_url_ingestion.py
tests/fixtures/: article_with_nav.html  article_with_table.html  (+1 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
(+36 files in other folders)
