[project]
name = "midlayer-exp"
version = "0.1.0"
description = "Backend for task planning agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi~=0.111",
  "uvicorn[standard]~=0.30",
  "pydantic~=2.7",
  "python-dotenv~=1.0",
  "networkx~=3.3",
  "openai~=1.40"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 4000

